[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "s3-batch-replication-from-inventory"
dynamic = ["version"]
description = "Split an S3 Inventory manifest across multiple S3 Batch Replication jobs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.60",
    "boto3-stubs[s3,s3control,iam,sts]~=1.42.60",
    "click>=8.3.1",
]

[project.scripts]
s3-batch-replication = "s3_batch_replication.__main__:cli"

[tool.hatch.version]
path = "s3_batch_replication/VERSION"
pattern = "(?P<version>.+)"

[tool.hatch.build.targets.wheel]
packages = ["s3_batch_replication"]

[tool.hatch.build.targets.wheel.force-include]
"README.md" = "s3_batch_replication/README.md"

[tool.hatch.build.hooks.custom]
path = "scripts/hatch_build.py"

[project.optional-dependencies]
dev = [
    "commitizen>=4.4",
    "pytest>=9.0.3",
    "pytest-mock>=3.14.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["_version.py", "build", "dist", ".git", ".venv"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "D",   # pydocstyle
]
ignore = [
    "E203",  # whitespace before ':' (Black compatibility)
    "E501",  # line too long
    "D105",  # missing docstring in magic method
    "D107",  # missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.1"
version_files = ["s3_batch_replication/VERSION:(?P<version>.+)"]
tag_format = "v$version"
bump_message = "bump: version $current_version → $new_version"
update_changelog_on_bump = true
